WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114132
[WIN] Fix problems with export macros of AutodrainedPool
https://bugs.webkit.org/show_bug.cgi?id=114132
Summary
[WIN] Fix problems with export macros of AutodrainedPool
Patrick R. Gansterer
Reported
2013-04-07 14:53:34 PDT
[WIN] Fix problems with export macros of AutodrainedPool
Attachments
Patch
(1.80 KB, patch)
2013-04-07 14:57 PDT
,
Patrick R. Gansterer
ggaren
: review+
ggaren
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Patrick R. Gansterer
Comment 1
2013-04-07 14:57:03 PDT
Created
attachment 196814
[details]
Patch
Geoffrey Garen
Comment 2
2013-04-07 15:46:30 PDT
Comment on
attachment 196814
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=196814&action=review
Please fix the style comment below before landing.
> Source/WTF/wtf/AutodrainedPool.h:49 > + inline explicit AutodrainedPool(int = 1) { } > + inline ~AutodrainedPool() { } > + inline void cycle() { }
No need for the inline keyword when defining a function inside its class declaration -- inline is implied.
Patrick R. Gansterer
Comment 3
2013-04-07 15:59:15 PDT
Committed
r147884
: <
http://trac.webkit.org/changeset/147884
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug