[WIN] Fix problems with export macros of AutodrainedPool https://bugs.webkit.org/show_bug.cgi?id=114132

Reviewed by Geoffrey Garen.

Exporting an inline function results in an error with the MS compiler.

* wtf/AutodrainedPool.h:
(AutodrainedPool):
(WTF::AutodrainedPool::AutodrainedPool):
(WTF::AutodrainedPool::~AutodrainedPool):
(WTF::AutodrainedPool::cycle):

Canonical link: https://commits.webkit.org/132513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147884 268f45cc-cd09-0410-ab3c-d52691b4dbfc